Cherry-pick cd186d735bf2. rdar://problem/97031866

REGRESSION (Safari 16): Dynamic viewport units (dvh) not matching viewport height
    https://bugs.webkit.org/show_bug.cgi?id=242758
    <rdar://problem/97031866>

    Reviewed by Simon Fraser.

    This is likely a regression from two different commits.

    248939@main started *always* setting an override for `sv*`/`lv*` based on `-[WKWebView setFrame:]`
    whereas before they'd fall back to `FrameView::viewportConstrainedVisibleContentRect`, which takes
    into account the `topContentInset`.

    251232@main switched from using `RenderView::size` for `dvh` to using `FrameView::size` instead,
    which does not take into account the `topContentInset`.

    * Source/WebCore/page/FrameView.cpp:
    (WebCore::FrameView::sizeForCSSDynamicViewportUnits const):
    Use a different method that takes into account the `topContentInset`. This also matches the fallback
    behavior for `sv*`/`lv*`.

    * Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
    (-[WKWebView _recalculateViewportSizesWithMinimumViewportInset:maximumViewportInset:throwOnInvalidInput:]):
    Include the `_topContentInset` when calculating the viewport sizes on macOS.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::setTopContentInset):
    * Source/WebKit/UIProcess/PageClient.h:
    (WebKit::PageClient::topContentInsetDidChange): Added.
    * Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.h:
    * Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.mm:
    (WebKit::PageClientImplCocoa::topContentInsetDidChange): Added.
    Recalculate the viewport sizes whenever the `_topContentInset` changes (including `_automaticallyAdjustsContentInsets`).

    * Tools/TestWebKitAPI/Tests/WebKitCocoa/CSSViewportUnits.mm:
    (TEST.CSSViewportUnits.TopContentInset): Added.
    (TEST.CSSViewportUnits.MinimumViewportInsetWithTopContentInset): Added.
    (TEST.CSSViewportUnits.MaximumViewportInsetWithTopContentInset): Added.

    Canonical link: https://commits.webkit.org/252878@main

Canonical link: https://commits.webkit.org/252432.157@safari-7614-branch