Source/WebKit/UIProcess/PageClient.h
@@ -279,6 +279,8 @@ public:
 
     virtual void didChangeContentSize(const WebCore::IntSize&) = 0;
 
+    virtual void topContentInsetDidChange() { }
+
     virtual void showSafeBrowsingWarning(const SafeBrowsingWarning&, CompletionHandler<void(std::variant<ContinueUnsafeLoad, URL>&&)>&& completionHandler) { completionHandler(ContinueUnsafeLoad::Yes); }
     virtual void clearSafeBrowsingWarning() { }
     virtual void clearSafeBrowsingWarningIfForMainFrameNavigation() { }
